--- a/css/css.css
+++ b/css/css.css
@@ -67,7 +67,7 @@ header{
     gap: 1rem;
     align-items: flex-start;
     padding-inline: 2rem;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -95,7 +95,7 @@ box-shadow: 0 0 2rem rgba(0,0,0,.25);
 
 main{
     padding: 2rem;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -114,6 +114,12 @@ main{
 @media screen and (min-width: 700px){
     .pokemon-todos{
         grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1600px){
+    .pokemon-todos{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
 
